:bug: Fixed alignment for header

--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -17,7 +17,7 @@
 } */
 
 
-@media (min-width: 3000px) {
+/* @media (min-width: 3000px) {
   .custom-container {
     padding: 0 10rem;
     margin: 0 auto;
@@ -26,4 +26,4 @@
   .custom-container img {
     height: auto;
   }
-}
+} */
